<resources>
    <string name="app_name">Sapatilhas</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="MenuPrincipal_fragment_label">Main Menu</string>
    <string name="sobre_fragment_label">About...</string>
    <string name="next">Next</string>
    <string name="sneaker">Sneaker</string>
    <string name="Brand">Brand</string>
    <string name="About">About</string>
    <string name="Search">Search</string>
    <string name="previous">Previous</string>
    <string name="back">Back to  menu</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="New_Sneaker_Label">New Sneaker</string>
    <string name="AddSneaker">Add Sneaker</string>
    <string name="UpdateSneaker">Update Sneaker</string>
    <string name="modelo">Model</string>
    <string name="tamanho">Size</string>
    <string name="cor">Color</string>
    <string name="SerialNumber">Serial Number</string>
    <string name="RequestModel">must fill modelo</string>
    <string name="RequestColor">must fill cor</string>
    <string name="RequestSize">must fill Size</string>
    <string name="RequestNameBrand">must fill Name Brand</string>
    <string name="RequestHeadOffice">must fill Head Office</string>
    <string name="RequestSerialNumber">must fill Serial Number</string>
    <string name="ErrorSapatilhaNew">Unable to store sneaker</string>
    <string name="AcertSapatilhaNew">Able to store sneaker</string>
    <string name="ErrorBrandNew">Unable to store brand</string>
    <string name="AcertBrandNew">Able to store brand</string>
    <string name="Teste1">Teste1</string>
    <string name="Sapatilha_eliminado_com_sucesso">Sneaker successfully deleted</string>
    <string name="erro_eliminar_Sapatilha">Error deleting sneaker</string>
    <string name="Sapatilha_alteradas_com_sucesso">Sneaker successfully altere</string>
    <string name="Marca_alteradas_com_sucesso">Brand successfully altere</string>
    <string name="erro_eliminar_marca">Error deleting brand</string>
    <string name="marca_eliminadacomsucesso">Brand successfully deleted</string>
    <string name="erro_alteradas_Sapatilha">Error altere sneaker</string>
    <string name="editar_marca_label">Altere Brand</string>

    <string name="editar_sapatilha_label">Altere Sneaker</string>
    <string name="Eliminar_sapatilha_label">Delete Sneaker</string>
    <string name="Aviso_Eliminar_sapatilha">Are you sure you want to delete the sneaker?</string>
    <string name="Eliminar_Marca_label">Delete Brand</string>
    <string name="Aviso_Eliminar_Marca">Are you sure you want to delete the brand?</string>
    <string name="Aviso_Tamanho">the size must be between 0 and 100</string>
    <string name="Aviso_SerialNumber">the Serial Number must be between 1 and 6 letter  </string>
    <string name="Aviso_Modelo">the model must be between 1 and 30 letter  </string>
    <string name="Aviso_Cor">the color must be between 1 and 30 letter  </string>
    <string name="Aviso_NomeMarca">the Name Brand must be between 1 and 30 letter  </string>
    <string name="Aviso_Sede">the head office must be between 1 and 30 letter  </string>
    <string name="AddBrand">Add Brand </string>
    <string name="NameBrand">Name Brand </string>
    <string name="headoffice">Head Office </string>

    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>


    <string name="madeby">Work by: Ivo Rafael Figueiredo Pinela (1706234)</string>


    <string name="lorem_ipsum">"         Lorem ipsum dolor sit ame, consectetur adipiscing elit. Nam in scelerisque sem. Mauris         volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus         dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad         litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend         diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,         ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.           Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus         egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed         neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada         fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,         molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor         bibendum, vel congue leo egestas.           Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit         amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,         molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer         interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at         lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,         in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque         est.           Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.         Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui         non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In         eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,         quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra         ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a         placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus         convallis.           Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et         malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa         gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,         libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper         sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.     "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="List_Sneaker_Labrl">Sneaker</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="Text">"This application consists of a database for a collection of sneakers, consisting of 2 tables namely: Sneaker and Brands that are related to each other.This work is carried out along the Advanced Programming classes. "</string>
    <string name="labelEliminar">Delete Sneaker</string>
</resources>