<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MenuPrincipalFragment">

    <fragment
        android:id="@+id/MenuPrincipalFragment"
        android:name="pt.ipg.sapatilhas.MenuPrincipalFragment"
        android:label="@string/MenuPrincipal_fragment_label"
        tools:layout="@layout/fragment_menu_principal">

        <action
            android:id="@+id/action_MenuPrincipalFragment_to_SobreFragment"
            app:destination="@id/SobreFragment" />
        <action
            android:id="@+id/action_MenuPrincipalFragment_to_SneakerListFragment"
            app:destination="@id/SneakerListFragment" />
        <action
            android:id="@+id/action_MenuPrincipalFragment_to_brandListFragment"
            app:destination="@id/brandListFragment" />
    </fragment>
    <fragment
        android:id="@+id/SobreFragment"
        android:name="pt.ipg.sapatilhas.SobreFragment"
        android:label="@string/sobre_fragment_label"
        tools:layout="@layout/fragment_sobre">

        <action
            android:id="@+id/action_SobreFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
    </fragment>
    <fragment
        android:id="@+id/SneakerListFragment"
        android:name="pt.ipg.sapatilhas.SneakerListFragment"
        android:label="@string/List_Sneaker_Labrl"
        tools:layout="@layout/fragment_sneaker_list">
        <action
            android:id="@+id/action_SneakerListFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
        <action
            android:id="@+id/action_SneakerListFragment_to_newSapatilhaFragment"
            app:destination="@id/newSapatilhaFragment" />

        <action
            android:id="@+id/action_SneakerListFragment_to_iliminarSapatilhasFragment"
            app:destination="@id/EliminarSapatilhasFragment" />
    </fragment>
    <fragment
        android:id="@+id/newSapatilhaFragment"
        android:name="pt.ipg.sapatilhas.NewSapatilhaFragment"
        android:label="@string/New_Sneaker_Label"
        tools:layout="@layout/fragment_new_sapatilha">
        <action
            android:id="@+id/action_newSapatilhaFragment_to_SneakerListFragment"
            app:destination="@id/SneakerListFragment" />
        <argument
            android:name="sapatilha"
            app:argType="pt.ipg.sapatilhas.Sapatilha"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/EliminarSapatilhasFragment"
        android:name="pt.ipg.sapatilhas.EliminarSapatilhasFragment"
        android:label="@string/Eliminar_sapatilha_label"
        tools:layout="@layout/fragment_eliminar_sapatilhas">
        <action
            android:id="@+id/action_iliminarSapatilhasFragment_to_SneakerListFragment"
            app:destination="@id/SneakerListFragment" />
        <argument
            android:name="sapatilha"
            app:argType="pt.ipg.sapatilhas.Sapatilha" />
    </fragment>
    <fragment
        android:id="@+id/brandListFragment"
        android:name="pt.ipg.sapatilhas.BrandListFragment"
        android:label="@string/Brand"
        tools:layout="@layout/fragment_brand_list">
        <action
            android:id="@+id/action_brandListFragment_to_MenuPrincipalFragment"
            app:destination="@id/MenuPrincipalFragment" />
        <action
            android:id="@+id/action_brandListFragment_to_newBrandFragment"
            app:destination="@id/newBrandFragment" />
        <action
            android:id="@+id/action_brandListFragment_to_eliminarMarcaFragment"
            app:destination="@id/eliminarMarcaFragment" />
    </fragment>
    <fragment
        android:id="@+id/newBrandFragment"
        android:name="pt.ipg.sapatilhas.NewBrandFragment"
        android:label="@string/AddBrand"
        tools:layout="@layout/fragment_new_brand">
        <action
            android:id="@+id/action_newBrandFragment_to_brandListFragment"
            app:destination="@id/brandListFragment" />
    </fragment>
    <fragment
        android:id="@+id/eliminarMarcaFragment"
        android:name="pt.ipg.sapatilhas.EliminarMarcaFragment"
        android:label="@string/Eliminar_Marca_label"
        tools:layout="@layout/fragment_eliminar_marca">
        <action
            android:id="@+id/action_eliminarMarcaFragment_to_brandListFragment"
            app:destination="@id/brandListFragment" />
        <argument
            android:name="marca"
            app:argType="pt.ipg.sapatilhas.Marca" />

    </fragment>
</navigation>